<resources>
    <string name="app_name">Let\'s Eat Resturant</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_eat">Let\'s eat</string>
    <string name="button">Button</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="image">image</string>

    <string name="upload_image">Upload Image</string>
    <string name="textview">TextView</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="already_have_an_account_login">already have an account? login</string>

</resources>