<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/loginpage"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3B000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="50dp"
            android:background="#00000000"
            android:orientation="vertical"
            android:theme="@style/Widget.AppCompat.EditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="238dp"
                android:layout_height="141dp"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:backgroundTintMode="add"
                android:contentDescription="@string/image"
                android:foregroundTintMode="multiply"
                app:srcCompat="@drawable/plate"
                app:tint="#DDDCDC"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/amita"
                android:gravity="center"
                android:text="@string/let_s_eat"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/butTon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/btn_gradient"
                android:text="@string/login"
                android:textColor="#CFD8DC" />

            <Button
                android:id="@+id/butTon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="150dp"
                android:background="@drawable/btn_gradient"
                android:text="@string/register"
                android:textColor="#FFFDE7" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>