<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundofsec"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="300dp"
                    android:layout_height="61dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/profileimage"
                    android:tint="#513025"
                    android:tintMode="src_over"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <Button
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:background="#006C5A5A"
                    android:gravity="bottom|center"
                    android:text="@string/upload_image"
                    android:textColor="#B1ADAD"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#000000"
                    android:gravity="fill"
                    android:text="@string/textview"
                    android:textColor="#EFEBEB"
                    android:textColorHint="#8BEFE8E8" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/viewback"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColor="#EFEBEB"
                    android:textColorHint="#8BEFE8E8"
                    android:textSize="25sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/viewback"
                    android:ems="10"
                    android:hint="email"
                    android:inputType="textEmailAddress"
                    android:textColor="#EFEBEB"
                    android:textColorHint="#8BEFE8E8"
                    android:textSize="25sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/viewback"
                    android:ems="10"
                    android:hint="phone"
                    android:inputType="phone"
                    android:textColor="#EFEBEB"
                    android:textColorHint="#8BEFE8E8"
                    android:textSize="25sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/viewback"
                    android:ems="10"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:textColorHint="#ACA9A9"
                    android:textSize="25sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_gradient"
                    android:text="register"
                    android:textColor="#FFCCBC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="17dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="80dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="#ECE8E8"
                        android:text="TextView"
                        android:textColor="#F1F1F1"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="or with"
                        android:textColor="#E3DDDD" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="80dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="#ECE8E8"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_gradding"
                        android:text="facebook"
                        android:textColor="#D5D0D0" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_grad"
                        android:text="google" />

                </LinearLayout>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="#00FFFFFF"
                    android:gravity="top"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="#F3EAEA"
                    android:textSize="8sp" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>